Fixed: SelectInput: Respect global scrollbar style in drop-down list

--- a/src/styles/themes/proton/inputs.styl
+++ b/src/styles/themes/proton/inputs.styl
@@ -366,7 +366,8 @@
   border-radius: 6px
   box-shadow: inset 0 0 0 1px #ffffff32,
               0 1px 3px 0 #00000032
-
+#root[data-native-scrollbars-thin="true"] .select-input-drop-down
+  scrollbar-width: thin
 #root[data-toolbar-color-scheme="light"] .select-input-drop-down
   box-shadow: inset 0 0 0 1px #00000036,
               0 1px 3px 0 #00000032
